# dental-voice-ai

./: Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env  README.md  requirements.txt
backend/app/: main.py
backend/app/ai_processing/: booking_flow_manager.py  dental_faq_matcher.py
backend/app/api/: tenants.py  vapi_webhooks.py
backend/app/api/v1/: __init__.py  dental.py
backend/app/core/: __init__.py  config.py  database.py  supabase_client.py
backend/app/database/: config.py  database_operations.py
backend/app/intelligence/: dental_faq_matcher.py
backend/app/models/: webhook_schemas.py
backend/app/webhooks/: dental_webhook_handler.py
backend/docs/: README.md
backend/docs/prompts/: README.md
backend/docs/schemas/: README.md  database_schemas.sql
prompts/: assistant_prompt.md  dental_assistant_prompts.md
prompts/core/: dental_assistant.md
src/dental_voice_ai/: main.py
src/dental_voice_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dental_voice_ai/api/v1/: dental.py
src/dental_voice_ai/core/: config.py  database.py  schemas.py
src/dental_voice_ai/intelligence/: __init__.py
